# libshout

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  index.d.ts  index.js  package.json  tsconfig.json
src/: Shout.cpp  Shout.h
